# Vespra

./: .env.example  .gitignore  Makefile  README.md  _apply_fixes.sh  _redeploy_gateway.sh  docker-compose.yml  smoke_test.sh
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  wrangler.jsonc  wrangler.toml
dashboard/src/: app.jsx  index.css
dashboard/src/components/: Card.jsx  Nav.jsx
dashboard/src/hooks/: useApi.js
dashboard/src/lib/: api.js
dashboard/src/pages/: Agents.jsx  Backtest.jsx  Goals.jsx  KillSwitch.jsx  Overview.jsx  Pipelines.jsx  Settings.jsx  Setup.jsx  TxLog.jsx  Wallets.jsx
docs/: MAINNET.md  SECURITY.md  SETUP.md  index.html
gateway/: .env.example  worker-gateway.py
gateway-rs/: .env.example  Cargo.toml  Dockerfile  cloudflared-config.yml  vespra-gateway-rs.service
gateway-rs/examples/: dump_dag.rs
gateway-rs/src/: agent_config.rs  config.rs  dag_registry.rs  error.rs  execution_gate.rs  fees.rs  goal_runner.rs  guards.rs  lib.rs  main.rs  safeguards.rs  sentinel_monitor.rs  yield_scheduler.rs
gateway-rs/src/agents/: chat.rs  coordinator.rs  executor.rs  launcher.rs  mod.rs  risk.rs  scout.rs  sentinel.rs  sniper.rs  trader.rs  yield_agent.rs
gateway-rs/src/backtest/: runner.rs  types.rs
gateway-rs/src/chain/: config.rs  mod.rs
gateway-rs/src/data/: aave.rs  historical.rs  mod.rs  pool.rs  price.rs  protocol.rs  quote.rs  wallet.rs  yield_provider.rs
gateway-rs/src/fee/: mod.rs
gateway-rs/src/middleware/: rate_limit.rs
gateway-rs/src/notifications/: mod.rs  telegram.rs
gateway-rs/src/orchestrator/: command.rs  coordinator.rs  launcher.rs  mod.rs  portfolio.rs  sentinel.rs  sniper.rs  trade_up.rs  yield_rot.rs
gateway-rs/src/routes/: agent_config.rs  backtest.rs  boot.rs  config.rs  coordinator.rs  execution.rs  fees.rs  goals.rs  health.rs  launcher.rs  mod.rs  nullboiler_worker.rs  portfolio.rs  proxy.rs  ratelimit.rs  safeguards.rs  sentinel.rs  sniper.rs  swarm.rs  trade_up.rs  yield_routes.rs  yield_scheduler.rs
gateway-rs/src/types/: decisions.rs  goals.rs  mod.rs  opportunity.rs  strategy.rs  trade_up.rs  tx.rs  wallet.rs
keymaster/: .env.example  Cargo.toml  Dockerfile
keymaster/src/: auth.rs  config.rs  crypto.rs  error.rs  keystore.rs  kill_switch.rs  main.rs  routes.rs  rpc.rs  state.rs  swap.rs
nullboiler/: .dockerignore  Dockerfile
nullboiler/reference/: todo.md
nullboiler/src/: main.zig
nullboiler/tests/: mock_worker.py  test_e2e.sh
proxy/: Dockerfile  vespra-proxy.py
scripts/: doctor.sh  init.sh
scripts/tests/: doctor_test.sh
vespra/: .env.example  .gitignore  docker-compose.yml
vespra/dashboard/: index.html  vite.config.js
vespra/dashboard/src/components/: Card.jsx
vespra/dashboard/src/hooks/: useChain.jsx
vespra/dashboard/src/lib/: api.js
vespra/dashboard/src/pages/: Overview.jsx  Wallets.jsx
vespra/gateway/: Dockerfile  swarm-pipeline.py  worker-gateway.py
vespra/keymaster/: Cargo.toml
vespra/keymaster/src/: auth.rs  config.rs  error.rs  keystore.rs  main.rs
vespra/nullboiler/: Dockerfile
