[package]
name = "vespra-keymaster"
version = "0.1.0"
edition = "2021"
description = "Vespra DeFi Agent Swarm — Key Management & Execution Service"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Ethereum / EVM
alloy = { version = "0.9", features = [
    "full",
    "signer-local",
    "provider-http",
    "network",
] }

# Cryptography (key encryption at rest)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Config & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
